--- a/tmux.conf
+++ b/tmux.conf
@@ -3,43 +3,59 @@ set -g default-terminal 'screen-256color'
 
 # act like vim
 setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
+# Smart pane switching with awareness of vim splits
+# See this blog post for additional detail:
+# http://robots.thoughtbot.com/post/53022241323/seamlessly-navigate-vim-and-tmux-splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+set -g status-bg colour4
+set -g status-fg colour15
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+set -g status-left '#[fg=colour4, bg=colour15, bold] #S #[fg=colour15, bg=colour4] '
 
+set -g status-left-length 20
 # increase scrollback lines
 set -g history-limit 10000
 
 # switch to last pane
 bind-key C-a last-pane
 
-# Local config
-if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+# bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
+bind -n C-Left resize-pane -L 10
+bind -n C-Right resize-pane -R 10
+bind -n C-Down resize-pane -D 5
+bind -n C-Up resize-pane -U 5
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
+# more intuitive keybindings for splitting
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set -s escape-time 0
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind b break-pane -d
+bind-key j command-prompt -p "join pane from:" "join pane -h -s '%%'"
