Update -- Vim buffer switching

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal "screen-256color-italic"
 
 # act like vim
 setw -g mode-keys vi
@@ -59,3 +59,5 @@ set -s escape-time 0
 
 bind b break-pane -d
 bind-key j command-prompt -p "join pane from:" "join pane -h -s '%%'"
+
+bind c new-window -c "#{pane_current_path}"
