--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,7 @@
+# Set prefix to Ctrl-Space
+unbind C-b
+set -g prefix C-Space
+
 # improve colors
 set -g default-terminal "screen-256color-italic"
 
@@ -16,10 +20,6 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
-
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
 set-window-option -g pane-base-index 1
@@ -29,10 +29,10 @@ set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
 set -g status-bg colour4
-set -g status-fg colour15
+set -g status-fg colour0
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left '#[fg=colour4, bg=colour15, bold] #S #[fg=colour15, bg=colour4] '
+set -g status-left '#[fg=colour15, bg=colour8, bold] #S #[fg=colour8, bg=colour4] '
 
 set -g status-left-length 20
 # increase scrollback lines
@@ -61,3 +61,5 @@ bind b break-pane -d
 bind-key j command-prompt -p "join pane from:" "join pane -h -s '%%'"
 
 bind c new-window -c "#{pane_current_path}"
+
+bind-key C-Space send-keys -R
