--- a/tmux.conf
+++ b/tmux.conf
@@ -63,3 +63,10 @@ bind-key j command-prompt -p "join pane from:" "join pane -h -s '%%'"
 bind c new-window -c "#{pane_current_path}"
 
 bind-key C-Space send-keys -R
+
+# Make C-j display a selectable list of sessions
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
+# Provide access to the clipboard for pbpaste, pbcopy (details: http://goo.gl/DN82E)
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-window-option -g automatic-rename on
