--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b
 set -g prefix C-Space
 
 # improve colors
-set -g default-terminal "screen-256color-italic"
+set -g default-terminal "tmux-256color"
 
 # act like vim
 setw -g mode-keys vi
