--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,23 @@
+set -g utf8 on
+
 # Set prefix to Ctrl-Space
 unbind C-b
 set -g prefix C-Space
+
+# Reload tmux configuration
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded..." \; move-window -r
+
+# mouse mode on by-default
+set -g mouse on
+
+# colorize messages in the command line
+set -g message-bg colour214
+set -g message-fg colour232
+set -g message-attr bright
+
+# visual notification of activity in other windows
+set -g monitor-activity on
+set -g visual-activity off
 
 # improve colors
 set -g default-terminal "tmux-256color"
@@ -9,6 +26,14 @@ set -g default-terminal "tmux-256color"
 setw -g mode-keys vi
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Smart pane switching with awareness of vim splits
 # See this blog post for additional detail:
@@ -27,14 +52,6 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# soften status bar color from harsh green to light gray
-set -g status-bg colour4
-set -g status-fg colour0
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left '#[fg=colour15, bg=colour8, bold] #S #[fg=colour8, bg=colour4] '
-
-set -g status-left-length 20
 # increase scrollback lines
 set -g history-limit 10000
 
@@ -70,3 +87,27 @@ bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(
 # Provide access to the clipboard for pbpaste, pbcopy (details: http://goo.gl/DN82E)
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-window-option -g automatic-rename on
+
+# =====================================
+# Status Bar
+# =====================================
+set -g status on                # turn the status bar on
+set -g status-utf8 on           # set utf-8 for the status bar
+set -g status-justify left
+
+# session-name | hostname       list of windows         date | time
+set -g status-bg colour236
+set -g status-left "#[bg=colour24,fg=colour223] #S "
+set -g status-left-length 70
+set -g status-right-length 70
+set -g status-right "#[bg=colour24,fg=colour223,bold] #h "
+
+# window status
+setw -g window-status-format "#[fg=colour223,bg=colour234,none] #I #[bg=colour24,fg=colour223,none] #W "
+setw -g window-status-current-format "#[bg=colour234,fg=colour214,none] #I #[fg=black,bg=colour214,none] #W "
+
+# set the pane border colors
+set -g pane-border-fg colour223
+set -g pane-border-bg default
+set -g pane-active-border-fg red
+set -g pane-active-border-bg default
