--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,10 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..." \; move-
 set -g mouse on
 
 # colorize messages in the command line
-set -g message-bg colour214
-set -g message-fg colour232
+# set -g message-bg colour214
+# set -g message-fg colour232
+set -g message-bg colour11
+set -g message-fg colour0
 set -g message-attr bright
 
 # visual notification of activity in other windows
@@ -96,15 +98,20 @@ set -g status-utf8 on           # set utf-8 for the status bar
 set -g status-justify left
 
 # session-name | hostname       list of windows         date | time
-set -g status-bg colour236
-set -g status-left "#[bg=colour24,fg=colour223] #S "
+# set -g status-bg colour236
+# set -g status-left "#[bg=colour24,fg=colour223] #S "
+# set -g status-right "#[bg=colour24,fg=colour223,bold] #h "
+set -g status-bg colour8
+set -g status-left "#[bg=colour12,fg=colour11] #S "
 set -g status-left-length 70
 set -g status-right-length 70
-set -g status-right "#[bg=colour24,fg=colour223,bold] #h "
+set -g status-right "#[bg=colour12,fg=colour11,bold] #h "
 
 # window status
-setw -g window-status-format "#[fg=colour223,bg=colour234,none] #I #[bg=colour24,fg=colour223,none] #W "
-setw -g window-status-current-format "#[bg=colour234,fg=colour214,none] #I #[fg=black,bg=colour214,none] #W "
+# setw -g window-status-format "#[fg=colour223,bg=colour234,none] #I #[bg=colour24,fg=colour223,none] #W "
+# setw -g window-status-current-format "#[bg=colour234,fg=colour214,none] #I #[fg=black,bg=colour214,none] #W "
+setw -g window-status-format "#[fg=colour11,bg=colour1,none] #I #[bg=colour12,fg=colour11,none] #W "
+setw -g window-status-current-format "#[bg=colour0,fg=colour11,none] #I #[fg=0,bg=colour11,none] #W "
 
 # set the pane border colors
 set -g pane-border-fg colour223
