--- a/scss-lint.yml
+++ b/scss-lint.yml
@@ -1,9 +1,14 @@
+# Default application configuration that all configurations inherit from.
+
 scss_files: "**/*.scss"
 plugin_directories: ['.scss-linters']
 
 # List of gem names to load custom linters from (make sure they are already
 # installed)
 plugin_gems: []
+
+# Default severity of all linters.
+severity: warning
 
 linters:
   BangFormat:
@@ -111,6 +116,10 @@ linters:
   PlaceholderInExtend:
     enabled: false
 
+  PrivateNamingConvention:
+    enabled: false
+    prefix: _
+
   PropertyCount:
     enabled: true
     include_nested: false
@@ -178,6 +187,10 @@ linters:
 
   SpaceAfterPropertyName:
     enabled: true
+
+  SpaceAfterVariableColon:
+    enabled: false
+    style: one_space # or 'no_space', 'at_least_one_space' or 'one_space_or_newline'
 
   SpaceAfterVariableName:
     enabled: true
