--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ set -g mouse on
 # colorize messages in the command line
 # set -g message-bg colour214
 # set -g message-fg colour232
-set -g message-bg colour11
+set -g message-bg colour3
 set -g message-fg colour0
 set -g message-attr bright
 
@@ -20,7 +20,8 @@ set -g monitor-activity on
 set -g visual-activity off
 
 # improve colors
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color-italic"
+set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # act like vim
 setw -g mode-keys vi
@@ -98,20 +99,20 @@ set -g status-justify left
 # set -g status-bg colour236
 # set -g status-left "#[bg=colour24,fg=colour223] #S "
 # set -g status-right "#[bg=colour24,fg=colour223,bold] #h "
-set -g status-bg colour8
-set -g status-left "#[bg=colour12,fg=colour11] #S "
+set -g status-bg colour0
+set -g status-left "#[bg=colour8,fg=colour10] #S "
 set -g status-left-length 70
 set -g status-right-length 70
-set -g status-right "#[bg=colour12,fg=colour11,bold] #h "
+set -g status-right "#[bg=colour8,fg=colour10,bold] #h "
 
 # window status
 # setw -g window-status-format "#[fg=colour223,bg=colour234,none] #I #[bg=colour24,fg=colour223,none] #W "
 # setw -g window-status-current-format "#[bg=colour234,fg=colour214,none] #I #[fg=black,bg=colour214,none] #W "
-setw -g window-status-format "#[fg=colour11,bg=colour0,none] #I #[bg=colour12,fg=colour11,none] #W "
-setw -g window-status-current-format "#[bg=colour0,fg=colour11,none] #I #[fg=0,bg=colour11,none] #W "
+setw -g window-status-format "#[fg=colour15,bg=colour8,none] #I #[bg=colour8,fg=colour15,none] #W "
+setw -g window-status-current-format "#[bg=colour0,fg=colour3,none] #I #[fg=3,bg=colour0,none] #W "
 
 # set the pane border colors
-set -g pane-border-fg colour223
+set -g pane-border-fg colour0
 set -g pane-border-bg default
-set -g pane-active-border-fg red
+set -g pane-active-border-fg colour1
 set -g pane-active-border-bg default
