--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,6 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..." \; move-
 set -g mouse on
 
 # colorize messages in the command line
-# set -g message-bg colour214
-# set -g message-fg colour232
 set -g message-bg colour3
 set -g message-fg colour0
 set -g message-attr bright
@@ -20,8 +18,11 @@ set -g monitor-activity on
 set -g visual-activity off
 
 # improve colors
-set -g default-terminal "xterm-256color-italic"
-set-option -ga terminal-overrides ",xterm-256color-italic:Tc"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set-option -ga terminal-overrides ',xterm*:sitm=\E[3m'
+# set -g default-terminal "tmux-256color"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
 
 # act like vim
 setw -g mode-keys vi
@@ -96,9 +97,6 @@ set -g status on                # turn the status bar on
 set -g status-justify left
 
 # session-name | hostname       list of windows         date | time
-# set -g status-bg colour236
-# set -g status-left "#[bg=colour24,fg=colour223] #S "
-# set -g status-right "#[bg=colour24,fg=colour223,bold] #h "
 set -g status-bg colour0
 set -g status-left "#[bg=colour8,fg=colour10] #S "
 set -g status-left-length 70
@@ -106,8 +104,6 @@ set -g status-right-length 70
 set -g status-right "#[bg=colour8,fg=colour10,bold] #h "
 
 # window status
-# setw -g window-status-format "#[fg=colour223,bg=colour234,none] #I #[bg=colour24,fg=colour223,none] #W "
-# setw -g window-status-current-format "#[bg=colour234,fg=colour214,none] #I #[fg=black,bg=colour214,none] #W "
 setw -g window-status-format "#[fg=colour15,bg=colour8,none] #I #[bg=colour8,fg=colour15,none] #W "
 setw -g window-status-current-format "#[bg=colour0,fg=colour3,none] #I #[fg=3,bg=colour0,none] #W "
 
