--- a/tmux.conf
+++ b/tmux.conf
@@ -94,19 +94,8 @@ set-window-option -g automatic-rename on
 set -g status on                # turn the status bar on
 set -g status-justify left
 
-# session-name | hostname       list of windows         date | time
-set -g status-bg colour0
-set -g status-left "#[bg=colour8,fg=colour10] #S "
-set -g status-left-length 70
-set -g status-right-length 70
-set -g status-right "#[bg=colour8,fg=colour10,bold] #h "
-
-# window status
-setw -g window-status-format "#[fg=colour15,bg=colour8,none] #I #[bg=colour8,fg=colour15,none] #W "
-setw -g window-status-current-format "#[bg=colour0,fg=colour3,none] #I #[fg=3,bg=colour0,none] #W "
-
-# set the pane border colors
-set -g pane-border-fg colour0
-set -g pane-border-bg default
-set -g pane-active-border-fg colour1
-set -g pane-active-border-bg default
+set -g pane-border-style 'fg=brightblack,bg=black'
+set -g pane-active-border-style 'fg=brightwhite,bg=black'
+set -g status-style 'fg=brightblack,bg=black'
+set -g message-style 'fg=cyan, bg=black'
+set -g clock-mode-colour cyan
