--- a/tmux.conf
+++ b/tmux.conf
@@ -91,11 +91,10 @@ set-window-option -g automatic-rename on
 # =====================================
 # Status Bar
 # =====================================
-set -g status on                # turn the status bar on
+set -g status on
+set -g status-style 'fg=brightblack,bg=black'
 set -g status-justify left
-
 set -g pane-border-style 'fg=brightblack,bg=black'
 set -g pane-active-border-style 'fg=brightwhite,bg=black'
-set -g status-style 'fg=brightblack,bg=black'
 set -g message-style 'fg=cyan, bg=black'
 set -g clock-mode-colour cyan
