--- a/tmux.conf
+++ b/tmux.conf
@@ -85,28 +85,25 @@ bind-key C-Space send-keys -R
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 # Provide access to the clipboard for pbpaste, pbcopy (details: http://goo.gl/DN82E)
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-window-option -g automatic-rename on
 
 # Look
 set -g status on
-set -g status-style 'fg=brightwhite,bg=black'
+set -g status-style 'fg=white'
 set -g status-justify left
 
 set -g pane-border-style 'fg=brightblack,bg=black'
-set -g pane-active-border-style 'fg=brightwhite,bg=black'
-set -g message-style 'fg=cyan, bg=black'
-set -g clock-mode-colour cyan
-set -g window-status-separator "#[fg=brightblack]┇"
+set -g pane-active-border-style 'fg=black,bg=black'
+set -g message-style 'fg=yellow, bg=black'
+set -g clock-mode-colour yellow
+set -g window-status-separator ""
 
 set -g status-left-length 90
 set -g status-right-length 90
-# ⁞
-set -g status-left '#[fg=black, bg=white] #S #[fg=white, bg=black]┇'
-set -g status-right '#[fg=black, bg=white]   #h   '
+set -g status-left '#[fg=brightblack] #S '
+set -g status-right '#[fg=brightblack] #h '
 
-set -g window-status-format ' #I ┆ #W '
-set -g window-status-fg white
-set -g window-status-bg black
+set -g window-status-format '#[fg=brightblack] #I #W '
 
-set -g window-status-current-format "#[fg=black,bg=cyan,bold] #I ┆ #W "
+set -g window-status-current-format '#[fg=yellow,italics] #I #W '
