--- a/tmux.conf
+++ b/tmux.conf
@@ -93,7 +93,7 @@ set -g status on
 set -g status-style 'fg=white'
 set -g status-justify left
 
-set -g pane-border-style 'fg=brightblack,bg=black'
+set -g pane-border-style 'fg=black,bg=black'
 set -g pane-active-border-style 'fg=black,bg=black'
 set -g message-style 'fg=yellow, bg=black'
 set -g clock-mode-colour yellow
