--- a/scss-lint.yml
+++ b/scss-lint.yml
@@ -19,7 +19,7 @@ linters:
     convention: zero
 
   ChainedClasses:
-    enabled: false
+    enabled: true
 
   ColorKeyword:
     enabled: true
@@ -67,7 +67,6 @@ linters:
 
   HexNotation:
     enabled: false
-    style: lowercase
 
   HexValidation:
     enabled: true
@@ -80,8 +79,8 @@ linters:
 
   ImportPath:
     enabled: true
-    leading_underscore: false
-    filename_extension: false
+    leading_underscore: true
+    filename_extension: true
 
   Indentation:
     enabled: true
@@ -95,8 +94,6 @@ linters:
 
   LengthVariable:
     enabled: false
-    allowed_lengths: []
-    allowed_properties: []
 
   MergeableSelector:
     enabled: true
@@ -117,12 +114,9 @@ linters:
 
   PrivateNamingConvention:
     enabled: false
-    prefix: _
 
   PropertyCount:
     enabled: false
-    include_nested: false
-    max_properties: 10
 
   PropertySortOrder:
     enabled: true
@@ -183,7 +177,7 @@ linters:
 
   SpaceAfterComment:
     enabled: true
-    style: one_space
+    style: at_least_one_space
     allow_empty_comments: true
 
   SpaceAfterPropertyColon:
@@ -243,7 +237,6 @@ linters:
 
   VariableForProperty:
     enabled: false
-    properties: []
 
   VendorPrefix:
     enabled: true
