Add thoughtbot's tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,41 +1,16 @@
-set -s escape-time 0
-set -g history-limit 10000
-set -g display-time 4000
-set -g status-interval 5
-set -g default-terminal "xterm-256color"
-set -g status-keys emacs
-set -g focus-events on
-setw -g aggressive-resize on
-
-# Set prefix to Ctrl-Space
-unbind C-b
-set -g prefix C-Space
-
-bind C-p previous-window
-bind C-n next-window
-
-# Reload tmux configuration
-bind R source-file '~/.tmux.conf'
-
-# mouse mode on by-default
-set -g mouse on
-
-# colorize messages in the command line
-set -g message-bg colour3
-set -g message-fg colour0
-set -g message-attr bright
-
-# visual notification of activity in other windows
-set -g monitor-activity on
-set -g visual-activity off
-
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+# improve colors
+set -g default-terminal 'screen-256color'
 
 # act like vim
 setw -g mode-keys vi
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
+set -g prefix2 C-s
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -44,51 +19,24 @@ set-window-option -g pane-base-index 1
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
 
-# bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
-bind -n S-Left resize-pane -L 2
-bind -n S-Right resize-pane -R 2
-bind -n S-Down resize-pane -D 1
-bind -n S-Up resize-pane -U 1
-bind -n C-Left resize-pane -L 10
-bind -n C-Right resize-pane -R 10
-bind -n C-Down resize-pane -D 5
-bind -n C-Up resize-pane -U 5
+# soften status bar color from harsh green to light gray
+set -g status-bg '#666666'
+set -g status-fg '#aaaaaa'
 
-bind \ split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
 
-bind C-Space send-keys -R
+# increase scrollback lines
+set -g history-limit 10000
 
-# Make C-j display a selectable list of sessions
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# prefix -> back-one-character
+bind-key C-b send-prefix
+# prefix-2 -> forward-incremental-history-search
+bind-key C-s send-prefix -2
 
-set-window-option -g automatic-rename on
+# don't suspend-client
+unbind-key C-z
 
-# Look
-set -g status on
-set -g status-style 'fg=white'
-set -g status-justify left
-
-set -g pane-border-style 'fg=black,bg=black'
-set -g pane-active-border-style 'fg=black,bg=black'
-set -g message-style 'fg=yellow, bg=black'
-set -g clock-mode-colour yellow
-set -g window-status-separator ""
-
-set -g status-left-length 90
-set -g status-right-length 90
-set -g status-left '#[fg=brightblack] #S '
-set -g status-right '#[fg=brightblack] #h '
-
-set -g window-status-format '#[fg=brightblack] #I #W '
-
-set -g window-status-current-format '#[fg=yellow,italics] #I #W '
-
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# Local config
+if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
