--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,15 @@
 # improve colors
-set -g default-terminal 'screen-256color'
+set -g default-terminal 'xterm-256color'
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+
+# Replace C-b with C-Space for the prefix key
+unbind C-b
+set -g prefix C-Space
+bind -r C-a send-prefix
+
+# Easy reloading of the tmux.conf configuration file
+bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # act like vim
 setw -g mode-keys vi
@@ -10,7 +20,15 @@ bind-key l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-set -g prefix2 C-s
+# bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
+bind -n C-Left resize-pane -L 10
+bind -n C-Right resize-pane -R 10
+bind -n C-Down resize-pane -D 5
+bind -n C-Up resize-pane -U 5
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -20,12 +38,12 @@ set-window-option -g pane-base-index 1
 set -g renumber-windows on
 
 # soften status bar color from harsh green to light gray
-set -g status-bg '#666666'
-set -g status-fg '#aaaaaa'
+set -g status-bg 'black'
+set -g status-fg 'yellow'
 
 # remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right ''
+set -g status-left '#S '
+set -g status-right '#h '
 
 # increase scrollback lines
 set -g history-limit 10000
@@ -38,5 +56,20 @@ bind-key C-s send-prefix -2
 # don't suspend-client
 unbind-key C-z
 
+# Expose session choosing (overwritten by resize pane commands)
+bind C-j choose-session
+
+# More intuitive keybindings for splitting
+bind \ split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
