--- a/tmux.conf
+++ b/tmux.conf
@@ -6,9 +6,33 @@ set -as terminal-overrides ',xterm*:sitm=\E[3m'
 # Replace C-b with C-Space for the prefix key
 unbind C-b
 set -g prefix C-Space
-bind -r C-a send-prefix
 
-# Easy reloading of the tmux.conf configuration file
+# Enable mouse
+set -g mouse on
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
+# increase scrollback lines
+set -g history-limit 10000
+
+set -s escape-time 0
+set -g display-time 4000
+set -g status-interval 5
+set -g status-keys emacs
+set -g focus-events on
+setw -g aggressive-resize on
+set-window-option -g automatic-rename on
+
+# visual notification of activity in other windows
+set -g monitor-activity on
+set -g visual-activity on
+
+# Reload tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # act like vim
@@ -20,7 +44,7 @@ bind-key l select-pane -R
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# bind resizing of panes to H,J,K,L (resizes by steps of 10 lines/columns)
+# Resize panes
 bind -n S-Left resize-pane -L 2
 bind -n S-Right resize-pane -R 2
 bind -n S-Down resize-pane -D 1
@@ -30,38 +54,45 @@ bind -n C-Right resize-pane -R 10
 bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
-
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
-
-# soften status bar color from harsh green to light gray
-set -g status-bg 'black'
-set -g status-fg 'yellow'
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left '#S '
-set -g status-right '#h '
-
-# increase scrollback lines
-set -g history-limit 10000
-
-# prefix -> back-one-character
-bind-key C-b send-prefix
-# prefix-2 -> forward-incremental-history-search
-bind-key C-s send-prefix -2
-
 # don't suspend-client
 unbind-key C-z
 
-# Expose session choosing (overwritten by resize pane commands)
-bind C-j choose-session
-
-# More intuitive keybindings for splitting
+# Split windows
 bind \ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
+# Clear screen
+bind C-Space send-keys -R
+
+# Display a selectable list of sessions
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# bind C-j 'tm'
+
+# Colors
+# colorize messages in the command line
+set -g message-bg colour3
+set -g message-fg colour0
+set -g message-attr bright
+
+set -g status on
+set -g status-style 'fg=white'
+set -g status-justify left
+
+set -g pane-border-style 'fg=black,bg=black'
+set -g pane-active-border-style 'fg=black,bg=black'
+set -g message-style 'fg=yellow, bg=black'
+set -g clock-mode-colour yellow
+set -g window-status-separator ""
+
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-left '#[fg=brightblack] #S '
+set -g status-right '#[fg=brightblack] #h '
+
+set -g window-status-format '#[fg=brightblack] #I #W '
+
+set -g window-status-current-format '#[fg=yellow,italics] #I #W '
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
