--- a/rubocop.yml
+++ b/rubocop.yml
@@ -1,3 +1,3 @@
 inherit_from:
   - https://raw.githubusercontent.com/thoughtbot/guides/master/style/ruby/.rubocop.yml
-  - ~/.rubocop.local.yml
+  - ~/.rubocop.yml.local
