Update tmux bar bg

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,7 +76,7 @@ set -g message-fg colour0
 set -g message-attr bright
 
 set -g status on
-set -g status-style 'fg=white'
+set -g status-style 'fg=white, bg=black'
 set -g status-justify left
 
 set -g pane-border-style 'fg=black,bg=black'
