--- a/tmux.conf
+++ b/tmux.conf
@@ -54,6 +54,9 @@ bind -n C-Right resize-pane -R 10
 bind -n C-Down resize-pane -D 5
 bind -n C-Up resize-pane -U 5
 
+bind -n C-S-Left swap-window -t -1
+bind -n C-S-Right swap-window -t +1
+
 # don't suspend-client
 unbind-key C-z
 
