Remove colors stuff from tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,16 +70,9 @@ bind C-Space send-keys -R
 
 # Display a selectable list of sessions
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
-# bind C-j 'tm'
-
-# Colors
-# colorize messages in the command line
-set -g message-bg colour3
-set -g message-fg colour0
-set -g message-attr bright
 
 set -g status on
-set -g status-style 'fg=white, bg=black'
+set -g status-style fg=white, bg=black
 set -g status-justify left
 
 set -g pane-border-style 'fg=black,bg=black'
