--- a/tmux.conf
+++ b/tmux.conf
@@ -72,7 +72,7 @@ bind C-Space send-keys -R
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 set -g status on
-set -g status-style fg=white, bg=black
+set -g status-style 'fg=white, bg=black'
 set -g status-justify left
 
 set -g pane-border-style 'fg=black,bg=black'
