Fix tmux key-binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,7 +61,7 @@ bind -n C-S-Right swap-window -t +1
 unbind-key C-z
 
 # Split windows
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
