--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,13 @@
 # improve colors
-set -g default-terminal 'xterm-256color'
-set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides  ",*256color*:RGB"
 
 # Replace C-b with C-Space for the prefix key
 unbind C-b
 set -g prefix C-Space
 
 # Enable mouse
-set -g mouse on
+set-option -g mouse on
 
 # start window numbers at 1 to match keyboard order with tmux window order
 set -g base-index 1
@@ -72,7 +71,7 @@ bind C-Space send-keys -R
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 set -g status on
-set -g status-style 'fg=white, bg=black'
+set -g status-style "fg=white, bg=#f1f8ff"
 set -g status-justify left
 
 set -g pane-border-style 'fg=black,bg=black'
@@ -86,7 +85,7 @@ set -g status-right-length 90
 set -g status-left '#[fg=brightblack] #S '
 set -g status-right '#[fg=brightblack] #h '
 
-set -g window-status-format '#[fg=brightblack] #I #W '
+set -g window-status-format '#[fg=black] #I #W '
 
 set -g window-status-current-format '#[fg=yellow,italics] #I #W '
 
