Use nord tmux theme

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,28 +71,12 @@ bind C-Space send-keys -R
 bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 set -g status on
-set -g status-style "fg=white, bg=#f1f8ff"
-set -g status-justify left
-
-set -g pane-border-style 'fg=black,bg=black'
-set -g pane-active-border-style 'fg=black,bg=black'
-set -g message-style 'fg=yellow, bg=black'
-set -g clock-mode-colour yellow
-set -g window-status-separator ""
-
-set -g status-left-length 90
-set -g status-right-length 90
-set -g status-left '#[fg=brightblack] #S '
-set -g status-right '#[fg=brightblack] #h '
-
-set -g window-status-format '#[fg=black] #I #W '
-
-set -g window-status-current-format '#[fg=yellow,italics] #I #W '
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "christoomey/vim-tmux-navigator"
+set -g @plugin "arcticicestudio/nord-tmux"
 
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
