--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+set -g default-shell '/usr/local/bin/fish'
 # improve colors
 set -g default-terminal 'tmux-256color'
 set -as terminal-overrides  ",*256color*:RGB"
@@ -68,7 +69,11 @@ bind c new-window -c "#{pane_current_path}"
 bind C-Space send-keys -R
 
 # Display a selectable list of sessions
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+# zsh shell
+# bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
+# fish shell
+bind C-j split-window -v 'tmux list-sessions -F "#{session_name}" | grep -v \"^(tmux display-message -p "#S")\$\" | fzf --reverse | read -l result; and tmux switch-client -t "$result"'
 
 set -g status on
 
