--- a/config/zsh/.zpreztorc
+++ b/config/zsh/.zpreztorc
@@ -24,17 +24,18 @@ zstyle ':prezto:*:*' color 'yes'
 
 # Set the Prezto modules to load (browse modules).
 # The order matters.
-zstyle ':prezto:load' pmodule \
-  'environment' \
-  'terminal' \
-  'editor' \
-  'history' \
-  'directory' \
-  'spectrum' \
-  'utility' \
-  'completion' \
-  'history-substring-search' \
-  'prompt'
+zstyle ":prezto:load" pmodule \
+  "environment" \
+  "terminal" \
+  "editor" \
+  "history" \
+  "directory" \
+  "spectrum" \
+  "utility" \
+  "completion" \
+  "history-substring-search" \
+  "prompt" \
+  "syntax-highlighting"
 
 #
 # Autosuggestions
