feat(env): update shell and vim configurations
- Add syntax-highlighting and autosuggestions to zsh
- Add mise activation
- Add fzf alias with preview
- Change vim colorscheme to unokai

--- a/config/zsh/.zpreztorc
+++ b/config/zsh/.zpreztorc
@@ -35,7 +35,8 @@ zstyle ":prezto:load" pmodule \
   "completion" \
   "history-substring-search" \
   "prompt" \
-  "syntax-highlighting"
+  "syntax-highlighting" \
+  "autosuggestions"
 
 #
 # Autosuggestions
@@ -141,7 +142,7 @@ zstyle ':prezto:module:editor' key-bindings 'emacs'
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'pure'
+zstyle ":prezto:module:prompt" theme "pure"
 
 # Set the working directory prompt display length.
 # By default, it is set to 'short'. Set it to 'long' (without '~' expansion)
